--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>Таблица 1: Стартовая строка HTTP</title>
+    <title>Таблицы: HTTP-запросы</title>
     <style>
       body {
         font-family: Arial, sans-serif;
